feat: decor input and button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <input id="password" type="password" />		
       </label>
     
-      <button type="submit">Submit</button>
+      <button id="btn" type="submit">Submit</button>
     </form>
   </body>
 </html>
